# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/hiviewdfx/hidumper/hidumper.gni")

config("dump_usage_config") {
  visibility = [ "*:*" ]

  include_dirs = [
    "include",
    "${hidumper_frameworks_path}",
    "${hidumper_frameworks_path}/include",
    "${hidumper_utils_path}/native/include",
  ]
}

ohos_shared_library("lib_dump_usage") {
  public_configs = [ ":dump_usage_config" ]

  sources = [
    "${hidumper_frameworks_path}/src/executor/memory/memory_util.cpp",
    "${hidumper_frameworks_path}/src/executor/memory/parse/parse_smaps_rollup_info.cpp",
    "${hidumper_frameworks_path}/src/util/dump_cpu_info_util.cpp",
    "${hidumper_frameworks_path}/src/util/string_utils.cpp",
    "//base/hiviewdfx/hidumper/interfaces/innerkits/dump_usage.cpp",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog_native:libhilog",
  ]

  subsystem_name = "hiviewdfx"
  part_name = "hidumper"
}
