# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/test.gni")
import("../../../hidumper.gni")

##############################fuzztest##########################################
ohos_fuzztest("DumpUsageFuzzTest") {
  module_out_path = hidumper_fuzz_output_path
  fuzz_config_file = "../../../test/fuzztest/dumpusage_fuzzer"

  include_dirs = [ "${hidumper_root_path}/innerkits/include/" ]
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [ "./dumpusage_fuzzer.cpp" ]
  deps = [ "${hidumper_root_path}/interfaces/innerkits:lib_dump_usage" ]
}

###############################################################################
group("fuzztest") {
  testonly = true
  deps = []
  deps += [
    # deps file
    ":DumpUsageFuzzTest",
  ]
}
###############################################################################
